TFP-6405: Diverse fiks * Laget en getArbeidsgiver() i VurderRefusjonAndelBeregningsgrunnlagDto * Endret til å kaste exception dersom det ikke finnes underkjent periode når man prøver å svare false på radioknapper * Test for mapper * Oppdatert tester til å teste spesifikke exceptions